--- a/slides/3-python.html
+++ b/slides/3-python.html
@@ -262,19 +262,19 @@
 
       <section>
         <section>
-          <h2>Python Container-Datentypen</h2>
+          <h2>Python Sammeltypen / Collections</h2>
           <ul style="font-size: 0.8em;">
             <li class="fragment">
               <strong><code>list</code></strong>
-              <p style="font-size: 0.8em;">ist ein geordneter Container-Datentyp, der eine beliebig lange <strong>Folge von Elementen</strong> speichern kann und durch eckige Klammern <strong><code>[]</code></strong> dargestellt wird</p>
+              <p style="font-size: 0.8em;">ist ein geordneter Sammeltyp, der eine beliebig lange <strong>Folge von Elementen</strong> speichern kann und durch eckige Klammern <strong><code>[]</code></strong> dargestellt wird</p>
             </li>
             <li class="fragment">
               <strong><code>dict</code></strong>
-              <p style="font-size: 0.8em;">ist ein ungeordneter Container-Datentyp, der <strong>Schlüssel-Wert-Paare</strong> speichert und durch geschweifte Klammern <strong><code>{}</code></strong> dargestellt wird, wobei jeder Schlüssel eindeutig sein muss und auf einen Wert zugreifen kann.</p>
+              <p style="font-size: 0.8em;">ist ein ungeordneter Sammeltyp, der <strong>Schlüssel-Wert-Paare</strong> speichert und durch geschweifte Klammern <strong><code>{}</code></strong> dargestellt wird, wobei jeder Schlüssel eindeutig sein muss und auf einen Wert zugreifen kann.</p>
             </li>
             <li class="fragment">
               <strong><code>set</code></strong>
-              <p style="font-size: 0.8em;">ist ein ungeordneter Container-Datentyp, der eine <strong>Sammlung einzigartiger Elemente</strong> speichert und durch geschweifte Klammern <strong><code>{}</code></strong> dargestellt wird, wobei doppelte Werte automatisch entfernt werden.</p>
+              <p style="font-size: 0.8em;">ist ein ungeordneter Sammeltyp, der eine <strong>Sammlung einzigartiger Elemente</strong> speichert und durch geschweifte Klammern <strong><code>{}</code></strong> dargestellt wird, wobei doppelte Werte automatisch entfernt werden.</p>
             </li>
           </ul>
         </section>
